--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,15 @@
 * Github: https://github.com/KiralyPeter/javascript_dolgozat_4.git
 * Licenc: GNU GPL
 */
+
+#about {
+    margin: auto;
+    text-align: center;    
+    width: 40%;
+    border-style: solid;
+    border-width: 2px;
+    border-color: gray;
+    border-radius: 5px;
+    background-color: rgb(220, 220, 220);
+    vertical-align: bottom;
+}
